--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -27,6 +27,14 @@
     display: flex;
     flex-direction: column;
     gap: 100px;
+    @media (max-width: 1024px) { 
+        padding: 0 10%;
+    }
+
+    @media (max-width: 768px) { 
+        width: 100%;
+        padding: 0 10%;
+    }
 }
 
 .navbar {
@@ -36,12 +44,24 @@
     background-color: rgba(55, 55, 55, 0.418);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @media (max-width: 768px) {
+        background: none;
+        border: none;
+    }
     .navbar-nav {
         display: flex;
         justify-content: space-evenly;
         gap: 50px;
         margin: 0 auto;
+        flex-wrap: wrap;
+        @media (max-width: 768px) {
+            display: none;
+        }
+
     }
 
     .nav-link:focus {
@@ -60,10 +80,10 @@
     a:hover {
         color: white;
         background-color: rgba(59, 59, 59, 0.37);
-        transform: scale(1.05); // Slightly enlarge the whole element
+        transform: scale(1.05);
     }
-
 }
+
 
 //HOME
 .home {
@@ -76,7 +96,13 @@
     flex-direction: column;
     padding-left: 20px;
     width: 50%;
+    @media (max-width: 1024px) { 
+        width: 100%;
+    }
 
+    @media (max-width: 768px) { 
+        width: 100%;
+    }
     .pattern {
         position: relative;
         width: 100%;
@@ -271,7 +297,16 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
+        
+            @media (max-width: 1024px) { 
+                grid-template-columns: repeat(2, 1fr); 
+            }
+        
+            @media (max-width: 768px) { 
+                grid-template-columns: 1fr; 
+            }
     }
+
 }
 
 //PROJECT
@@ -336,6 +371,13 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
+        @media (max-width: 1024px) { 
+            grid-template-columns: repeat(2, 1fr);
+        }
+    
+        @media (max-width: 768px) { 
+            grid-template-columns: repeat(1);
+        }
     }
 
     .social-card {
@@ -349,7 +391,8 @@
         padding: 0px 25px;
         height: 50px;
         transition: transform 0.3s;
-
+        
+        
         &:hover {
             transform: scale(1.03);
             border: 1px solid #8CF0CE;
@@ -430,7 +473,15 @@
         flex-direction: column;
         gap: 40px;
         padding: 30px 80px;
-        
+
+        @media (max-width: 1024px) { 
+            width: 90%;
+        }
+    
+        @media (max-width: 768px) {
+            display: 100%;
+            padding: 15px;
+        }
         .popup-header{
             display: flex;
             justify-content: space-between;
@@ -443,6 +494,14 @@
 
                 h3{
                     font-size: 2.5rem;
+                }
+                @media (max-width: 768px) {
+                    h3{
+                        font-size: 2rem;
+                    }
+                    small{
+                        font-size: 0.75rem;
+                    }
                 }
             }
 
